[package]
name = "exifrename"
version = "1.0.0"
edition = "2021"
authors = ["Chris Down <chris@chrisdown.name>"]
description = "Rename or copy files based on EXIF data."
repository = "https://github.com/cdown/exifrename"
readme = "README.md"
keywords = ["exif", "image", "rename", "organise", "organize"]
categories = ["command-line-utilities", "filesystem"]
license = "MIT"
rust-version = "1.64.0"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.5.0", features = ["std", "derive", "help"], default-features = false }
kamadak-exif = "0.5.5"
tempfile = "3.8.1"
funcfmt = "0.3.0"
walkdir = "2.4.0"
rayon = "1.8.0"

[target.'cfg(target_family = "unix")'.dependencies]
libc = "0.2.150"

[target.'cfg(target_family = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winerror"] }
