[package]
name = "exifrename"
version = "1.0.0"
edition = "2021"
authors = ["Chris Down <chris@chrisdown.name>"]
description = "Rename or copy files based on EXIF data."
repository = "https://github.com/cdown/exifrename"
readme = "README.md"
keywords = ["exif", "image", "rename", "organise", "organize"]
categories = ["command-line-utilities", "filesystem"]
license = "MIT"
rust-version = "1.74"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["std", "derive", "help"], default-features = false }
kamadak-exif = "0.5.5"
tempfile = "3.13.0"
funcfmt = "0.3.0"
walkdir = "2.5.0"
rayon = "1.10.0"

[target.'cfg(target_family = "unix")'.dependencies]
libc = "0.2.161"

[target.'cfg(target_family = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["errhandlingapi", "winbase", "winerror"] }

[dev-dependencies]
assert_cmd = "2.0.16"
tempfile = "3.13.0"
