[package]
name = "exifrename"
version = "1.1.0"
edition = "2021"
authors = ["Chris Down <chris@chrisdown.name>"]
description = "Rename or copy files based on EXIF data."
repository = "https://github.com/cdown/exifrename"
readme = "README.md"
keywords = ["exif", "image", "rename", "organise", "organize"]
categories = ["command-line-utilities", "filesystem"]
license = "MIT"
rust-version = "1.74"

[dependencies]
anyhow = { version = "1.0.93", features = ["std"], default-features = false }
clap = { version = "4.5.21", features = ["std", "derive", "help"], default-features = false }
kamadak-exif = { version = "0.6.1", default-features = false }
tempfile = { version = "3.14.0", default-features = false }
funcfmt = { version = "0.3.0", default-features = false }
walkdir = { version = "2.5.0", default-features = false }
rayon = { version = "1.10.0", default-features = false }

[target.'cfg(target_family = "unix")'.dependencies]
libc = { version = "0.2.169", default-features = false }

[target.'cfg(target_family = "windows")'.dependencies]
windows-sys = { version = "0.59.0", default-features = false }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
tempfile = "3.14.0"
